Fix component style bleed over to global from ::ng-deep
- Fixed all component `scss` declarations using `::ng-deep` in front as the
CSS selector. Using `::ng-deep` like this causes component scope style to
bleed over to global space.

--- a/ui/src/app/graphs/world-map/world-map.component.scss
+++ b/ui/src/app/graphs/world-map/world-map.component.scss
@@ -22,6 +22,6 @@
   }
 }
 
-::ng-deep .dark #map-container {
+:host ::ng-deep .dark #map-container {
   background: darken($clr-action-blue-darkest, 4%) !important;
 }
